--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+spring.application.name="MSArticle"
 # Port configuration
 server.port=8083
 spring.data.mongodb.uri=mongodb://localhost:27017
@@ -6,4 +8,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=db-microservice
 
+
+
+eureka.client.service-url.defaultZone=http://discovery:8761/eureka
+eureka.client.register-with-eureka=true
 
