--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 spring.application.name="MSArticle"
 # Port configuration
-server.port=8083
-spring.data.mongodb.uri=mongodb://localhost:27017
+server.port=8082
+spring.data.mongodb.uri=mongodb://Mongo:27017
 # MongoDB Configuration
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=Mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=db-microservice
 
