--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,11 @@
 spring.application.name="MSArticle"
 # Port configuration
 server.port=8082
-spring.data.mongodb.uri=mongodb://Mongo:27017
+spring.data.mongodb.uri=mongodb://localhost:27017
 # MongoDB Configuration
-spring.data.mongodb.host=Mongo
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=db-microservice
-
-
-
-eureka.client.service-url.defaultZone=http://discovery:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 
